# proj_398-ai-powered-code-generation-saas-platform

./: .gitignore  .prettierignore  README.md  docker-compose.yml  package.json  turbo.json
.github/workflows/: ci.yml  preview-deploy.yml
k8s/dev/: backend-deployment.yaml  backend-service.yaml  configmap.yaml  frontend-deployment.yaml  frontend-service.yaml  ingress.yaml  secrets.yaml
src/api/: .dockerignore  .env.example  Dockerfile  pyproject.toml
src/api/app/: __init__.py  main.py
src/api/app/api/: __init__.py  health.py
src/api/app/core/: __init__.py  config.py  logging.py
src/api/tests/: __init__.py
src/web/: .dockerignore  .env.example  Dockerfile  eslint.config.mjs  next.config.ts  package.json  tailwind.config.ts
src/web/src/app/: layout.tsx
